background fixes and image insertion

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,6 +27,9 @@
 					if($('#slideshow').length > 0){
 						$('#slideshow').animate( { backgroundColor: hue }, 4000);				    
 					}
+					if($('.studio').length > 0){
+						$('.studio').animate({ backgroundColor: hue}, 4000);
+					}
  					$('.links ul li').animate( {backgroundColor: hue }, 4000);
 					$('#logo').animate( { backgroundColor: hue }, 4000, spectrum);
 
