--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -384,6 +384,7 @@ strong {
     position: relative;
     width: 100%;
     height: 512px;
+    background: #C5C5C5;
 }
 
 #slideshow img {
@@ -404,15 +405,15 @@ strong {
 }
 
 .studio {
-    width: 90%;
-    margin: 0px auto;
-    -webkit-box-shadow: 5px 5px 5px #111;
-    box-shadow: 5px 5px 5px #111;
+    width: 500px;
+    margin-right: 30px;
+    float: left;
+    background: #f41616;
 }
 
 .player {
     width: 400px;
-    margin: 0px auto;
+    float: left;
     text-align: center;
     padding: 40px 0px 0px 0px;
 }
