added fonts, completed splash page, footer

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -65,6 +65,10 @@
 					<li>+91 9819 449 239</li>
 					<li><%= link_to "github.com/FangedParakeet", 'http://github.com/FangedParakeet', target: 'blank' %></li>
 				</ul>
+				<ul id="second">
+					<li><%= link_to "@fangedparakeet", "http://twitter.com/fangedparakeet", target: 'blank' %></li>
+					<li><%= link_to "Samir Merchant @LinkedIn", "http://www.linkedin.com/pub/samir-merchant/57/538/267", target: 'blank' %></li>
+				</ul>
 			</div>
 
 			<div class="site_info"></div>
