--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,6 +13,11 @@
  */
  /*** RESET ***/
 
+ @font-face {
+     font-family: "Roboto-Light";
+     src: url('Roboto-Thin.ttf') format('truetype');
+ }
+
  html, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, a, blockquote, pre, abbr, address, cite, code, del, dfn, em, img, ins, kbd, q, samp,
  small, strong, sub, sup, var, b, i, dl, dt, dd, ol, ul, li, hr, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td,
  article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section, summary, time, mark, audio, video {
@@ -23,7 +28,7 @@
    outline: 0;
    padding: 0;
    vertical-align: baseline;
-   font-family: Helvetica;
+   font-family: "Roboto-Thin", Helvetica;
  }
 
  a {
@@ -125,6 +130,13 @@
     color: #ffffff;
 }
 
+#second li {
+    width: 50%;
+    margin-top: 20px;
+}
+
+
+
 .contact p {
     margin: 0px auto;
     text-align: center;
@@ -202,6 +214,10 @@
 .right {
     width: 550px;
     float: left;
+}
+
+#next:hover {
+    cursor: pointer;
 }
 
 .content {
