--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -1,9 +1,4 @@
 @import "twitter/bootstrap/bootstrap";
-body { 
-	padding-top: 0px;
-	background-color: #ffffff;
-}
-
 @import "twitter/bootstrap/responsive";
 
 // Set the correct sprite paths
@@ -31,3 +26,9 @@ body {
 //
 // Example:
 // @linkColor: #ff0000;
+
+body { 
+	padding-top: 0em;
+	background-color: #ffffff;
+}
+
