--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
 						$('.left').animate( {backgroundColor: hue}, 3000);
 					}
 					if($('#slideshow').length > 0){
-						// $('#slideshow').animate( { backgroundColor: hue }, 3000);				    
+						$('#slideshow').animate( { backgroundColor: hue }, 3000);				    
 					}
 					if($('.studio').length > 0){
 						$('.studio').animate({ backgroundColor: hue}, 3000);
