--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,6 +31,8 @@
 						$('.studio').animate({ backgroundColor: hue}, 3000);
 					}
  					$('.links ul li').animate( {backgroundColor: hue}, 3000);
+					$('.strong').animate( {color: hue}, 3000);
+					$('#reddevil').animate( {backgroundColor: hue}, 3000);
 					$('#logo').animate( { backgroundColor: hue }, 3000, spectrum);
 
 			 }  
