--- a/app/views/layouts/application.mobile.erb
+++ b/app/views/layouts/application.mobile.erb
@@ -45,7 +45,7 @@
 				<div class="toolbar" id="main_head">
 					<a class="back" rel="external" href="?mobile=0">Full Site</a>
 					<h1>Samir Merchant</h1>
-					<a class="button slideup" id="about_site" href="#about_this">About This Page</a>
+					<a class="button slideup" id="about_site" href="#about_this">Info</a>
 				</div>
 				<h2>Contact</h2>
 				<div class="scroll">
@@ -220,10 +220,10 @@
 				<h2>I also make music.</h2>
 				<ul class="metal">
 					<li>
-						<div class="mobile_player"><iframe id="simple" width="320" height="300" style="position: relative; display: block; width: 320px; height: 300px;" src="http://bandcamp.com/EmbeddedPlayer/v=2/album=1542218114/size=grande3/bgcol=f42525/linkcol=ea3e3e/transparent=true/" allowtransparency="true" frameborder="0"><a href="http://simplemachinesband.bandcamp.com/album/spirit-of-the-shoreland-ep">Spirit of the Shoreland EP by Simple Machines</a></iframe></div>
+						<div class="mobile_player"><iframe id="simple" width="300" height="300" style="position: relative; display: block; width: 320px; height: 300px;" src="http://bandcamp.com/EmbeddedPlayer/v=2/album=1542218114/size=grande3/bgcol=f42525/linkcol=ea3e3e/transparent=true/" allowtransparency="true" frameborder="0"><a href="http://simplemachinesband.bandcamp.com/album/spirit-of-the-shoreland-ep">Spirit of the Shoreland EP by Simple Machines</a></iframe></div>
 					</li>
 					<li>
-						<div class="li_pics"><%= image_tag 'simple machines.png', width: '320' %></div>
+						<div class="li_pics"><%= image_tag 'simple machines.png', width: '300' %></div>
 					</li>
 				</ul>
 			</div>
