sinistereo temporarily redirected

--- a/app/views/layouts/application.mobile.erb
+++ b/app/views/layouts/application.mobile.erb
@@ -184,7 +184,7 @@
 					<ul class="metal">
 						<li><p><a href="http://sinistereo.fm" rel="external" target="blank" style="display:inline"><%= image_tag 'sinistereo.png', width: '320' %></a> <a href="http://sinistereo.fm" rel="external" target="blank" style="display:inline">Sinistereo</a></p>
 							<ul class="metal">
-								<li><p>Music streaming app for indie bands and music connoisseurs. Ruby on Rails app with a client-side Javascript and AJAX interface. Hosted via Heroku with storage on Amazon's S3 cloud. Live, but not fully active at <a href="http://sinistereo.fm" rel="external" target="blank" style="display:inline">sinistereo.fm</a></p></li>
+								<li><p>Music streaming app for indie bands and music connoisseurs. Ruby on Rails app with a client-side Javascript and AJAX interface. Hosted via Heroku with storage on Amazon's S3 cloud. Live, but not fully active at <a href="http://sinistereo.herokuapp.com" rel="external" target="blank" style="display:inline">sinistereo.fm</a></p></li>
 							</ul>
 						</li>
 						<li>
