--- a/app/views/layouts/application.mobile.erb
+++ b/app/views/layouts/application.mobile.erb
@@ -182,7 +182,7 @@
 				<h2><strong style="font-style:italic">"When you work you are a flute through whose heart the whispering of the hours turns to music."</strong>--Kahlil Gibran</h2>
 				<div class="scroll">
 					<ul class="metal">
-						<li><p><a href="http://sinistereo.fm" rel="external" target="blank" style="display:inline"><%= image_tag 'sinistereo.png', width: '320' %></a> <a href="http://sinistereo.fm" rel="external" target="blank" style="display:inline">Sinistereo</a></p>
+						<li><p><a href="http://sinistereo.herokuapp.com" rel="external" target="blank" style="display:inline"><%= image_tag 'sinistereo.png', width: '320' %></a> <a href="http://sinistereo.herokuapp.com" rel="external" target="blank" style="display:inline">Sinistereo</a></p>
 							<ul class="metal">
 								<li><p>Music streaming app for indie bands and music connoisseurs. Ruby on Rails app with a client-side Javascript and AJAX interface. Hosted via Heroku with storage on Amazon's S3 cloud. Live, but not fully active at <a href="http://sinistereo.herokuapp.com" rel="external" target="blank" style="display:inline">sinistereo.fm</a></p></li>
 							</ul>
