fixed mobile link in corner

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -60,6 +60,7 @@
 				<div class="clear"></div>
 			</div>
 		</div>
+		<div class="clear"></div>
 		<!-- End Container -->
 		<div class="footer">
 			<div class="contact">
@@ -75,6 +76,7 @@
 				<div class="site_info"></div>
 			</div>
 		</div>
+		<div class="clear"></div>
 		<!-- End footer -->
 		
 </body>
