--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -75,12 +75,17 @@
 
 
 /*** GLOBAL ***/
+html, body {
+    width: 100%;
+    height: 100%;
+}
+
 
 .mobile_link  {
-    position: absolute;
+    position: fixed;
     top: 0em;
     right: 0em;
-    z-index: 1;
+    z-index: -1;
     height: 100px;
     width: 100px;
 }
@@ -111,7 +116,7 @@
     margin: 0em auto;
     text-align: center; 
     padding: 1em;
-    z-index: -1;
+    z-index: 1;
 }
 
 #logo {
