--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -75,11 +75,6 @@
 
 
 /*** GLOBAL ***/
-html, body {
-    width: 100%;
-    height: 100%;
-}
-
 
 .mobile_link  {
     position: fixed;
@@ -490,7 +485,11 @@ html, body {
 
 .footer {
     width: 100%;
-    background-color: #C5C5C5;
+    min-width: 100%;
+    background: #C5C5C5 repeat scroll 0 0;
+    position: absolute;
+    left: 0;
+    right: 0;
     box-shadow: 0em -0.125em 0.6em #C5C5C5;
 }
     
