updated subshuffler image and order

--- a/app/views/layouts/application.mobile.erb
+++ b/app/views/layouts/application.mobile.erb
@@ -182,22 +182,24 @@
 				<h2><strong style="font-style:italic">"When you work you are a flute through whose heart the whispering of the hours turns to music."</strong>--Kahlil Gibran</h2>
 				<div class="scroll">
 					<ul class="metal">
-						<li><p><a href="http://sinistereo.herokuapp.com" rel="external" target="blank" style="display:inline"><%= image_tag 'sinistereo.png', width: '320' %></a> <a href="http://sinistereo.herokuapp.com" rel="external" target="blank" style="display:inline">Sinistereo</a></p>
+						<li>
+							<p><a href="http://sinistereo.herokuapp.com" rel="external" target="blank" style="display:inline"><%= image_tag 'sinistereo.png', width: '320' %></a> <a href="http://sinistereo.herokuapp.com" rel="external" target="blank" style="display:inline">Sinistereo</a></p>
 							<ul class="metal">
 								<li><p>Music streaming app for indie bands and music connoisseurs. Ruby on Rails app with a client-side Javascript and AJAX interface. Hosted via Heroku with storage on Amazon's S3 cloud. Live, but not fully active at <a href="http://sinistereo.herokuapp.com" rel="external" target="blank" style="display:inline">sinistereo.fm</a></p></li>
 							</ul>
 						</li>
 						<li>
-							<p style="text-align:right"><a href="http://hashpage.me" rel="external" target="blank" style="display:inline">HashPage</a>	<a href="http://hashpage.me" rel="external" target="blank" style="display:inline"><%= image_tag 'hashpage.png', width: '320' %></a></p>
+							<p style="text-align:right"><a href="http://subredditshuffler.herokuapp.com" rel="external" target="blank" style="display:inline">Subreddit Shuffler</a> <a href="http://subredditshuffler.herokuapp.com" rel="external" target="blank" style="display:inline"><%= image_tag 'shuffler2.png', width: '320' %></a></p>
+						<ul class="metal">
+							<li><p style="text-align:right">Audio & video content mixer for <a href="http://reddit.com" target="blank" style="display:inline">Reddit</a> Subreddits. Ruby on Rails app combining Javascript, AJAX, jQuery, and YouTube's own JS/SWFObject API on the front-end to display content via Reddit's API. Hosting via Heroku. Live at <a href="http://subredditshuffler.herokuapp.com" rel="external" target="blank" style="display:inline">subredditshuffler.herokuapp.com</a>. Currently functional for YouTube, Vimeo, & Soundcloud.</p></li>
+						</ul>
+						</li>
+						<li>
+							<p><a href="http://hashpage.me" rel="external" target="blank" style="display:inline"><%= image_tag 'hashpage.png', width: '320' %></a> <a href="http://hashpage.me" rel="external" target="blank" style="display:inline">HashPage</a></p>
 							<ul class="metal">
-								<li><p style="text-align:right">Customizable profile page for Twitter users. Ruby on Rails app communicating with Twitter's REST API. I worked predominantly on sessions, reducing API calls, and modeling. Not currently live at <a href="http://hashpage.me" rel="external" target="blank" style="display:inline">hashpage.me</a>.</p>
+								<li><p>Customizable profile page for Twitter users. Ruby on Rails app communicating with Twitter's REST API. I worked predominantly on sessions, reducing API calls, and modeling. Not currently live at <a href="http://hashpage.me" rel="external" target="blank" style="display:inline">hashpage.me</a>.</p>
 								</li>
 							</ul>
-						</li>
-						<li><p><a href="http://subredditshuffler.herokuapp.com" rel="external" target="blank" style="display:inline"><%= image_tag 'shuffler.png', width: '320' %></a> <a href="http://subredditshuffler.herokuapp.com" rel="external" target="blank" style="display:inline">Subreddit Shuffler</a></p>
-						<ul class="metal">
-							<li><p>Audio & video content mixer for <a href="http://reddit.com" target="blank" style="display:inline">Reddit</a> Subreddits. Ruby on Rails app combining Javascript, AJAX, jQuery, and YouTube's own JS/SWFObject API on the front-end to display content via Reddit's API. Hosting via Heroku. Live at <a href="http://subredditshuffler.herokuapp.com" rel="external" target="blank" style="display:inline">subredditshuffler.herokuapp.com</a>. Currently functional for YouTube, Vimeo, & Soundcloud.</p></li>
-						</ul>
 						</li>
 					</ul>
 				</div>			
