updated subreddit shuffler url

--- a/app/views/layouts/application.mobile.erb
+++ b/app/views/layouts/application.mobile.erb
@@ -189,7 +189,7 @@
 							</ul>
 						</li>
 						<li>
-							<p style="text-align:right"><a href="http://subredditshuffler.herokuapp.com" rel="external" target="blank" style="display:inline">Subreddit Shuffler</a> <a href="http://subredditshuffler.herokuapp.com" rel="external" target="blank" style="display:inline"><%= image_tag 'shuffler2.png', width: '320' %></a></p>
+							<p style="text-align:right"><a href="http://subredditshuffler.com" rel="external" target="blank" style="display:inline">Subreddit Shuffler</a> <a href="http://subredditshuffler.com" rel="external" target="blank" style="display:inline"><%= image_tag 'shuffler2.png', width: '320' %></a></p>
 						<ul class="metal">
 							<li><p style="text-align:right">Audio & video content mixer for <a href="http://reddit.com" target="blank" style="display:inline">Reddit</a> Subreddits. Ruby on Rails app combining Javascript, AJAX, jQuery, and YouTube's own JS/SWFObject API on the front-end to display content via Reddit's API. Hosting via Heroku. Live at <a href="http://subredditshuffler.herokuapp.com" rel="external" target="blank" style="display:inline">subredditshuffler.herokuapp.com</a>. Currently functional for YouTube, Vimeo, & Soundcloud.</p></li>
 						</ul>
